--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,8 +2,8 @@ body
 {
     color: #333;
     text-align: center;
-    font-family: "Curier";
-    font-size: 16px;
+    font-family: "Currier";
+    font-size: 20px;
     margin: 0;
     padding: 0;
 
