--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,8 +11,8 @@ body
 }
 #cabecera
 {
-    background: #33A;
-    color     : red;
+    background: rgb(51, 170, 91);
+    color     : rgb(0, 38, 255);
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     font-weight: bold;
     margin    :   0;
