--- a/css/estilos.css
+++ b/css/estilos.css
@@ -55,16 +55,15 @@ body
 
 #footer
 {
-    background: rgb(206, 238, 130);
+    background: rgb(245, 148, 22);
     color     : rgb(0, 38, 255);
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     font-weight: bold;
     margin    :   0;
-    padding: 0.5em;
+    padding: 0;
     text-align: center;
 
 }
-
 
 
 #container
